--- a/app/src/main/res/layout/activity_cc_cerrar_sesion.xml
+++ b/app/src/main/res/layout/activity_cc_cerrar_sesion.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DCE3DA"
-    android:paddingRight="20dp"
-    tools:context=".ncfraguc">
+    tools:context=".CcCerrarSesion">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="130dp"
@@ -16,14 +18,14 @@
             android:layout_width="wrap_content"
             android:layout_height="65dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="20dp"
             android:backgroundTint="@color/white"
             android:padding="12dp"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold"
             android:text="MENÚ"
-            android:id="@+id/btnMenuF7N1"
+            android:id="@+id/btnMenu15"
             android:drawableLeft="@drawable/menu_icon"/>
         <Button
             android:layout_width="wrap_content"
@@ -32,31 +34,19 @@
             android:backgroundTint="#DFD4BA"
             android:padding="12dp"
             android:textColor="@color/black"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:textStyle="bold"
             android:text="CUENTA"
-            android:id="@+id/btnCuentaF7N1"
+            android:id="@+id/btnCuenta15"
             android:drawableLeft="@drawable/user_icon"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="140dp"
-        android:paddingHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="220dp"
         android:orientation="horizontal"
         android:gravity="center">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:backgroundTint="#DDD3B9"
-            android:text="REGRESAR"
-            android:textStyle="bold"
-            android:textSize="22dp"
-            android:textColor="@color/black"
-            android:drawableLeft="@drawable/back_icon"
-            android:padding="12dp"
-            android:id="@+id/btnRetornoF7N1"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="55dp"
@@ -65,111 +55,88 @@
             android:textStyle="bold"
             android:backgroundTint="#E67694"
             android:textColor="@color/black"
-            android:id="@+id/btnEscucharF7N1"
+            android:id="@+id/btnEscuchar15"
             android:drawableRight="@drawable/listen_icon"
             android:padding="12dp"/>
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="470dp"
-        android:layout_marginTop="220dp">
+        android:layout_height="470dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="10dp"
             android:orientation="vertical">
             <TextView
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="UBICA TU CLÍNICA"
-                android:textSize="27dp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
-            <TextView
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="15dp"
-                android:gravity="center"
-                android:text="¿Quieres buscar una unidad específica del IMSS cerca de ti?\nBusca en el cuadro de [ SELECIONA OPCION ]:\nUna Imagen de la ubicación clínica seleccionada se desplegará debajo."
-                android:textSize="20dp"
-                android:textColor="@color/black"/>
-            <TextView
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="15dp"
-                android:text="Opciones"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
-            <Spinner
-                android:layout_width="350dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:id="@+id/spnOpc"/>
-            <TextView
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:text="Código Postal"
-                android:textSize="20dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="¿Seguro que quieres cerrar sesión?
+
+"
                 android:textStyle="bold"
+                android:textSize="25dp"
                 android:textColor="@color/black"/>
             <TextView
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_gravity="center"
-                android:background="@drawable/edtext_background"
-                android:paddingVertical="12dp"
-                android:hint="CODIGO POSTAL"
                 android:gravity="center"
+                android:text="Si cierras sesión tus datos NO SE BORRAN, pero YA NO VAS A VER tus datos médicos en tu nombre.  Para volver a ver tu información tendrás que VOLVER A INICIAR SESIÓN."
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:textColor="@color/black"/>
+            <TextView
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Si te equivocaste y NO QUIERES CERRAR SESIÓN, ve a [ REGRESAR ]."
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:textColor="@color/black"/>
+            <Button
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:backgroundTint="#272B3C"
+                android:padding="20dp"
+                android:text="SÍ QUIERO CERRAR SESIÓN"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:id="@+id/btnCerrarSesion"
+                android:drawableLeft="@drawable/close_icon"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_gravity="right"
+                android:backgroundTint="#DDD3B9"
+                android:padding="12dp"
+                android:text="REGRESAR"
+                android:textStyle="bold"
+                android:textSize="25dp"
                 android:textColor="@color/black"
-                android:textSize="22dp"
-                android:id="@+id/txtVCP"/>
-            <TextView
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:text="Dirección"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
-            <TextView
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/edtext_background"
-                android:paddingVertical="12dp"
-                android:hint="DIRECCIÓN"
-                android:gravity="center"
-                android:textSize="20dp"
-                android:id="@+id/txtVDir"/>
-            <ImageView
-                android:layout_width="350dp"
-                android:layout_height="220dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:id="@+id/imgMapa"
-                android:visibility="gone"/>
+                android:drawableLeft="@drawable/back_icon"
+                android:id="@+id/btnRetorno15"/>
         </LinearLayout>
     </ScrollView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_marginTop="696dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:background="#536152"
-        android:gravity="center_horizontal">
+        android:gravity="center">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="65dp"
-            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:backgroundTint="#E6CFA0"
             android:padding="12dp"
@@ -177,18 +144,17 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:text="EMERGENCIA"
-            android:id="@+id/btnEmergenciaF7N1"
+            android:id="@+id/btnEmergencia15"
             android:drawableLeft="@drawable/call_icon"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="65dp"
-            android:layout_marginTop="10dp"
             android:backgroundTint="#DFD4BA"
             android:padding="12dp"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold"
             android:text="GLOSARIO"
-            android:id="@+id/btnGlosarioF7N1"/>
+            android:id="@+id/btnGlosario15"/>
     </LinearLayout>
-</FrameLayout>
+</LinearLayout>
