--- a/app/src/main/res/layout/fragment_ccfraginicio.xml
+++ b/app/src/main/res/layout/fragment_ccfraginicio.xml
@@ -70,8 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical"
-                android:paddingVertical="20dp"
-                android:paddingLeft="20dp">
+                android:paddingVertical="20dp">
                 <TextView
                     android:layout_width="350dp"
                     android:layout_height="wrap_content"
@@ -169,7 +168,7 @@
     </ScrollView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="140dp"
         android:layout_marginTop="695dp"
         android:orientation="horizontal"
         android:background="#536152"
