--- a/app/src/main/res/layout/fragment_ccfraguc.xml
+++ b/app/src/main/res/layout/fragment_ccfraguc.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#DCE3DA"
     android:paddingRight="20dp"
-    tools:context=".ncfraguc">
+    tools:context=".ccfraguc">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="130dp"
@@ -16,14 +16,14 @@
             android:layout_width="wrap_content"
             android:layout_height="65dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="20dp"
             android:backgroundTint="@color/white"
             android:padding="12dp"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold"
             android:text="MENÚ"
-            android:id="@+id/btnMenuF7N1"
+            android:id="@+id/btnMenuF7N2"
             android:drawableLeft="@drawable/menu_icon"/>
         <Button
             android:layout_width="wrap_content"
@@ -32,10 +32,10 @@
             android:backgroundTint="#DFD4BA"
             android:padding="12dp"
             android:textColor="@color/black"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:textStyle="bold"
             android:text="CUENTA"
-            android:id="@+id/btnCuentaF7N1"
+            android:id="@+id/btnCuentaF7N2"
             android:drawableLeft="@drawable/user_icon"/>
     </LinearLayout>
     <LinearLayout
@@ -56,7 +56,7 @@
             android:textColor="@color/black"
             android:drawableLeft="@drawable/back_icon"
             android:padding="12dp"
-            android:id="@+id/btnRetornoF7N1"/>
+            android:id="@+id/btnRetornoF7N2"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="55dp"
@@ -65,7 +65,7 @@
             android:textStyle="bold"
             android:backgroundTint="#E67694"
             android:textColor="@color/black"
-            android:id="@+id/btnEscucharF7N1"
+            android:id="@+id/btnEscucharF7N2"
             android:drawableRight="@drawable/listen_icon"
             android:padding="12dp"/>
     </LinearLayout>
@@ -110,7 +110,7 @@
                 android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:id="@+id/spnOpc"/>
+                android:id="@+id/spnOpc2"/>
             <TextView
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
@@ -130,7 +130,7 @@
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="22dp"
-                android:id="@+id/txtVCP"/>
+                android:id="@+id/txtVCP2"/>
             <TextView
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
@@ -149,13 +149,13 @@
                 android:hint="DIRECCIÓN"
                 android:gravity="center"
                 android:textSize="20dp"
-                android:id="@+id/txtVDir"/>
+                android:id="@+id/txtVDir2"/>
             <ImageView
                 android:layout_width="350dp"
                 android:layout_height="220dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:id="@+id/imgMapa"
+                android:id="@+id/imgMapa2"
                 android:visibility="gone"/>
         </LinearLayout>
     </ScrollView>
@@ -177,7 +177,7 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:text="EMERGENCIA"
-            android:id="@+id/btnEmergenciaF7N1"
+            android:id="@+id/btnEmergenciaF7N2"
             android:drawableLeft="@drawable/call_icon"/>
         <Button
             android:layout_width="wrap_content"
@@ -189,6 +189,6 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:text="GLOSARIO"
-            android:id="@+id/btnGlosarioF7N1"/>
+            android:id="@+id/btnGlosarioF7N2"/>
     </LinearLayout>
 </FrameLayout>
